# pyteg

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  __init__.py  client.py  ejecutar_docker.sh  logging.conf  pyproject.toml  reformater.sh  requirements-action.txt  requirements-nogui.txt  requirements-test.txt  requirements.txt  run_test.sh  run_tests.sh  uv_run_test.sh
.github/: dependabot.yml
.github/workflows/: build-release.yml  pylint.yml  ruff-uv.yml  ruff.yml
diagram/: batalla.txt  calculos.txt  close.txt  generate.sh  mapa.txt
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  SOUND_SYSTEM.md  como_crear_mensaje_bidireccional.md  como_crear_mensaje_cliente_a_servidor.md  como_crear_mensaje_servidor_a_cliente.md  instrucciones_mensajes.md  instrucciones_mensajes_bidireccional.md  mensajes_cliente.md  mensajes_servidor.md
docs/diagrams/: agregar_unidades.md  diagrama_cliente.puml  diagrama_inicio_servidor.puml  finalizar_turno.md  finalizar_turno.puml  gui_modular_architecture.md  message_flow.md
locales/en/LC_MESSAGES/: pyteg.po
locales/es/LC_MESSAGES/: pyteg.po
pyteg/: __init__.py  build_mapa.py  calculos.py  client_connection.py  client_msg.py  client_tasks.py  client_tasks_manager.py  client_transmisor.py  colores.py  config.py  debug_logger.py  game_card_manager.py  game_context.py  game_turn_manager.py  game_victory_checker.py  gui.py  gui_admin.py  gui_attack_dialog.py  gui_card_manager.py  gui_chat.py  gui_circulo.py  gui_conectar.py  gui_config_manager.py  gui_configuracion_dialog.py  gui_dice_animation.py  gui_dice_widget.py  gui_esperar_jugadores.py  gui_game_actions.py  gui_language_manager.py  gui_language_selector.py  gui_layout_manager.py  gui_menu.py  gui_pais.py  gui_pais_battle_fx.py  gui_pais_selection.py  gui_players_manager.py  gui_radio_color.py  gui_scene.py  gui_sound_control.py  gui_status_manager.py  (+40 more)
pyteg/client/: __init__.py  app.py  logging_setup.py  run.py
pyteg/client/colores/: __init__.py  color.py  paleta.py
pyteg/client/conexion/: __init__.py  connection.py
pyteg/client/msg/: __init__.py  actions.py  base.py  cards.py  lobby.py  missiles.py
pyteg/client/tasks/: __init__.py  base.py  battle.py  cards_missiles.py  game_flow.py  lobby.py  manager.py  protocols.py  types.py
pyteg/client_tasks/: __init__.py  base.py  battle.py  cards_missiles.py  game_flow.py  lobby.py  logging_helper.py
pyteg/core/: __init__.py  theme_resources.py
pyteg/core/cartas/: __init__.py  mazo.py  tarjeta_de_pais.py
pyteg/core/combate/: __init__.py  batalla.py  calculos.py  missile_system.py  protocols.py
pyteg/core/mapa/: __init__.py  build_mapa.py  country_data.py  theme_layout.py
pyteg/core/partida/: __init__.py  card_manager.py  config.py  context.py  objetivos_secretos.py  turn_manager.py  victory_checker.py
pyteg/core/turnos/: __init__.py  protocol.py  timer.py  turnos.py  unit_pool.py
pyteg/exceptions/: __init__.py  base.py  game_rules.py  system.py
pyteg/gui/: __init__.py  connection_utils.py  gameplay_state.py  main_window.py  units_placement.py
pyteg/gui/dialogs/: __init__.py  attack.py  conectar.py  configuracion.py  dice_animation.py  move.py  place.py
pyteg/gui/facades/: __init__.py  main_window_delegates.py
pyteg/gui/managers/: __init__.py  cards.py  config.py  game_actions.py  language.py  layout.py  players.py  (+6 more)
pyteg/gui_tarjetas/: __init__.py  exchange_mixin.py  styles.py
pyteg/logger/: __init__.py  config.py  formatter.py  handlers.py  manager.py  process.py  retention.py
pyteg/protocols/: __init__.py  client.py  game.py  jugador.py  mapa.py  server.py
pyteg/server/: __init__.py  app.py  logging_setup.py
pyteg/server_msg/: __init__.py  base.py  battle.py  cards_missiles.py  config.py  connection.py  map_turn.py  players.py
pyteg/server_tasks/: __init__.py  cards_missiles.py  game_actions.py  lobby.py
scripts/: __init__.py  analyze_code.py  check_map_overlaps.py  compile_mo.py  make_gif.sh  make_mp4.sh  manage_translations.py  nudge_map_countries.py
sounds/: README.md
src/: batalla.py  build_mapa.py  calculos.py  client.py  client_color.py  client_connection.py  client_msg.py  client_receptor.py  client_tasks.py  client_tasks_manager.py  client_transmisor.py  cliente_colores.py  codecs_utils.py  colores.py  config.py  connection_client.py  country.py  dados.py  debug_logger.py  event_types.py  exception.py  game.py  game_card_manager.py  game_config.py  game_context.py  game_turn_manager.py  game_victory_checker.py  gui.py  gui_admin.py  gui_attack_dialog.py  gui_card_manager.py  gui_chat.py  gui_circulo.py  gui_conectar.py  gui_config_manager.py  gui_configuracion_dialog.py  gui_dice_animation.py  gui_esperar_jugadores.py  gui_game_actions.py  gui_language_manager.py  (+59 more)
test/: map.py
tests/: __init__.py  country_test.py  locale_fixtures.py  map_test.py  test_army_position.py  test_batalla.py  test_calculos.py  test_client_task_victoria.py  test_client_tasks.py  test_client_tasks_lobby.py  test_codecs_utils.py  test_config_manager.py  test_continents_config.py  test_country.py  test_country_ownership_validator.py  test_dados.py  test_game.py  test_gameplay_state.py  test_gui_admin_i18n.py  test_gui_context_menu_missile.py  test_gui_context_menu_place.py  test_gui_esperar_jugadores_i18n.py  test_gui_language_manager.py  test_gui_move_dialog.py  test_gui_protocol_compat.py  test_gui_scene_i18n.py  test_gui_tarjetas_import.py  test_gui_toolbar_actions.py  test_gui_toolbar_size_extra.py  test_gui_toolbar_window.py  test_gui_units_manager.py  test_gui_units_panel.py  test_integration.py  test_log_cli.py  test_map_overlap_check.py  test_map_rules.py  test_mapa.py  test_mazo.py  test_misiles.py  test_msg_pais_wire_format.py  (+24 more)
themes/classic/: adyacencias.toml  cartas.toml  objetivos_secretos.toml  paises.toml
themes/test/: adyacencias.toml  cartas.toml  objetivos_secretos.toml  paises.toml
(+103 files in other folders)
