[project]
name = "pyteg"
version = "0.0.6"
requires-python = ">=3.11"
dependencies = [
    "polib==1.2.0",
    "pyside6==6.10.1",
]

[project.scripts]
pyteg-client = "src.run_client:main"
pyteg-server = "src.server:main"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = [
	  "ALL", 
	 ]
ignore = [
	"D", # pydocstyle
	"CPY", # flake8-copyright
	"DJ",  # flake8-django
	"T20", # flake8-print
	"PT",  # flake8-pytest-style
	"AIR", # Airflow
	"ANN", # flake8-annotations 
	"COM812",    # missing-trailing-comma ; ruff format
	"ISC001",    # single-line-implicit-string-concatenation ; ruff format
	# Revisar los siguientes
	#"BLE001", # blind-except
	"PLR0904", # too-many-public-methods 	
	#"PLR0911", # too-many-return-statements
	#"PLR0914", # too-many-locals
	"PLR2004", # magic-value-comparison
	"PLR6301", # no-self-use
	"ERA001",  # commented-out-code
	"C901",    # complex-structure
	"DOC201",    # docstring-missing-returns
	]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pyside6-stubs==6.7.3.0",
    "typing-extensions==4.15.0",
    "types-polib==1.2.0.20241221",
    "coverage==7.12.0",
    "ruff==0.14.5",
    "nuitka==2.8.6",
    "hatch==1.15.1",
    "hatch-nuitka==0.0.4",
]


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
check_untyped_defs = false
explicit_package_bases = true
files = ["src", "tests", "scripts"]

[build-system]
requires = ["hatchling>=1.18", "hatch-nuitka"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.nuitka]
# Entradas a compilar con Nuitka
main = [
  "src/server.py",
  "src/run_client.py",
]
onefile = true
standalone = true
output-dir = "dist"

