[project]
name = "pyteg"
version = "0.0.8"
requires-python = ">=3.11"
dependencies = [
    "polib==1.2.0",
    "pyside6==6.10.1",
]

[project.scripts]
pyteg-client = "pyteg.client.run:main"
pyteg-server = "pyteg.server.app:main"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = [
	  "ALL", 
	 ]
ignore = [
	"CPY", # flake8-copyright
	"DJ",  # flake8-django
	"T20", # flake8-print
	"PT",  # flake8-pytest-style
	"AIR", # Airflow
	"ANN", # flake8-annotations 
	"COM812",    # missing-trailing-comma ; ruff format
	"ISC001",    # single-line-implicit-string-concatenation ; ruff format
	"PLR0904", # too-many-public-methods
	"PLR6301", # no-self-use
	"ERA001",  # commented-out-code
	"C901",    # complex-structure
	"D203",   #
	"D213",   #
	]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    # PyPI solo publica pyside6-stubs hasta la serie 6.7.x; el runtime es PySide6 6.10.x.
    "pyside6-stubs==6.7.3.0",
    "typing-extensions==4.15.0",
    "types-polib==1.2.0.20250401",
    "coverage==7.12.0",
    "ruff==0.14.10",
    "nuitka==2.8.6",
    "hatch==1.16.2",
    "hatch-nuitka==0.0.4",
    "radon==6.0.1",
    "pylint==4.0.4",
    "bandit==1.9.2",
]


[tool.coverage.run]
branch = true
source = ["pyteg"]

[tool.coverage.report]
fail_under = 50

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
files = ["pyteg", "tests", "scripts"]

[tool.uv]
constraint-dependencies = [
    # GHSA-537c-gmf6-5ccf: OpenSSL embebido en wheels de cryptography < 48.0.1
    "cryptography>=48.0.1",
]

[build-system]
requires = ["hatchling>=1.18", "hatch-nuitka"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyteg"]

[tool.hatch.build.targets.nuitka]
# Entradas a compilar con Nuitka
main = [
  "pyteg/server.py",
  "pyteg/run_client.py",
]
onefile = true
standalone = true
output-dir = "dist"
